--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Animated text</title>
+		<meta charset="utf-8">
+		<title>Kohli Graphics Design</title>
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<link rel="stylesheet" type="text/css" href="text.css">
 	</head>
 	<body>
