--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Kohli Graphics Design</title>
+		<title>Animated PreLoader</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<link rel="stylesheet" type="text/css" href="text.css">
 	</head>
